# ros2_ws

./: .Run Commands.txt.swp  README.md  Run Commands.txt  frames_2025-08-14_14.04.54.gv  frames_2025-08-15_00.51.33.gv
install/: local_setup.sh  setup.sh
install/a_star_planner_gazebo/lib/a_star_planner_gazebo/: a_star_node
install/a_star_planner_gazebo/share/a_star_planner_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  params.yaml
install/dl_traversability_layer/lib/dl_traversability_layer/: traversability
install/dl_traversability_layer/share/dl_traversability_layer/: package.dsv  (+5 more)
src/a_star_planner_gazebo/: setup.cfg  setup.py
src/a_star_planner_gazebo/a_star_planner_gazebo/: a_star_core.py
src/a_star_planner_gazebo/launch/: a_star.launch.py
src/dl_traversability_layer/: package.xml  setup.cfg  setup.py
src/dl_traversability_layer/dl_traversability_layer/: model.py
src/dl_traversability_layer/launch/: traversability.launch.py
src/grid_slam_gazebo/: setup.cfg  setup.py
src/grid_slam_gazebo/grid_slam_gazebo/: grid_utils.py
src/grid_slam_gazebo/launch/: gazebo_tb3_world.launch.py
src/markov_localization_gazebo/: package.xml  setup.cfg  setup.py
src/markov_localization_gazebo/markov_localization_gazebo/: motion_models.py  params.yaml
src/markov_localization_gazebo/resource/: markov_localization_gazebo
src/markov_localization_gazebo/rviz/: markov_localization.rviz
src/my_turtlebot3_gazebo/: package.xml  setup.cfg  setup.py
src/my_turtlebot3_gazebo/launch/: my_world.launch.py  spawn_and_slam.launch.py
(+24 files in other folders)
